<resources>
    <string name="app_name">TennCricClub</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="signin">sign in</string>
    <string name="forgotlink">Forgot Your Password?</string>
    <string name="player">Player</string>
    <string name="organizer">Organizer</string>
    <string name="submit">Submit</string>
    <string name="rtnlogin">Return to Login</string>
    <string name="emailuser">Enter data</string>
    <string name="verify">Verification Code</string>
    <string name="newpass">New Password</string>
    <string name="confnewpass">Confirm Password</string>
    <string name="resendsms">Resend SMS</string>
    <string name="home">Home</string>
    <string name="Gallery">Gallery</string>
    <string name="Tournaments">Tournaments</string>
    <string name="Profile">Profile</string>
    <string name="cricket">Its time to go out \nand play Cricket</string>
    <string name="create">Create an Account</string>
    <string name="splacescreenlink">ALREADY HAVE AN ACCOUNT?</string>
    <string name="signref">Sign in</string>
    <string name="signup">Sign Up</string>
    <string name="fname">First Name</string>
    <string name="lname">Last Name</string>
    <string name="sadd">Address</string>
    <string name="mnumber">Mobile Number</string>
    <string name="dateofbirth">Date of Birth</string>
    <string name="btncreate">Create Account</string>
    <string name="facebook">f</string>
    <string name="profilename">Firstname Lastname</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="update">Update</string>
    <string name="user_forgot">Username</string>
    <string name="mobile_forgot">Mobile Number</string>
    <string name="existing_password">Existing Password</string>

    <string name="date">Date</string>
    <string name="series_name">Series Name</string>
    <string name="time">Time</string>
    <string name="venue">Venue</string>
    <string name="batting">Batting</string>
    <string name="bowling">Bowling</string>
    <string name="player_name">Player Name</string>
    <string name="run">Run</string>
    <string name="balls">Balls</string>
    <string name="_4">4s</string>
    <string name="_6">6s</string>
    <string name="sr">SR</string>
    <string name="wickets">Wickets</string>
    <string name="avg">Avg</string>
    <string name="team1">Team1</string>
    <string name="team2">Team2</string>
    <string name="create_game">Create Game</string>
    <string name="game_name">Game Name</string>
    <string name="news">News</string>
    <string name="matches">Matches</string>
    <string name="participated">Participated</string>
    <string name="Personal">Gallery</string>
    <string name="teamonename">Team 1 name</string>
    <string name="teamtwo">Team 2 name</string>
    <string name="sign_up">Sign Up</string>
    <string name="join_this_match">Be the part of it!!!</string>
    <string name="team_2">Team 2</string>
    <string name="team_1">Team 1</string>
    <string name="gname">Game Name</string>
    <string name="contact_no">Contact No</string>
    <string name="contact">Contact</string>
    <string name="cricket_news">Cricket News</string>
</resources>
