<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainlinear"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/DarkBlue"
    android:orientation="vertical"
    tools:context="com.example.jeet.tenncricclub.LoginActivity">


    <LinearLayout
        android:id="@+id/linear2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/dp10"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/logo"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_gravity="center"
            android:src="@drawable/logo" />
    </LinearLayout>


    <LinearLayout
        android:id="@+id/linear4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingHorizontal="@dimen/dp60"
        android:paddingVertical="@dimen/dp20">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/inputuser"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/grey"
            android:textColorHint="@color/grey"
            android:theme="@style/textinput">

            <EditText
                android:id="@+id/user"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/username"
                android:textColor="@color/White"
                android:textColorHint="@color/White"
                android:textColorLink="@color/White" />
        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
            android:id="@+id/inputpass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/White"
            android:textColorHint="@color/grey"
            android:theme="@style/textinput">

            <EditText
                android:id="@+id/pass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:textColor="@color/White"
                android:textColorHint="@color/White"
                android:textColorLink="@color/White" />
        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/sigin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/dp30"
            android:layout_marginTop="@dimen/dp40"
            android:background="@drawable/btnstyle"
            android:text="@string/signin"
            android:textColor="@color/White" />

        <TextView
            android:id="@+id/forgot"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="@dimen/dp10"
            android:text="@string/forgotlink"
            android:textAllCaps="true"
            android:textColor="@color/grey" />


        <Button
            android:id="@+id/sigup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp30"
            android:background="@drawable/btnstyle"
            android:text="@string/sign_up"
            android:textColor="@color/White" />

    </LinearLayout>


</LinearLayout>
